--- a/Mod5Ex01.ipynb
+++ b/Mod5Ex01.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Módulo 5 Tarefa 1\n",
         "## Base de nascidos vivos do DataSUS\n",
-        "O DataSUS disponibiliza diversos arquivos de dados com relação a seus segurados, conforme a [lei da transparência de informações públicas]\n
+        "O DataSUS disponibiliza diversos arquivos de dados com relação a seus segurados, conforme a [lei da transparência de informações públicas]\n",
         "### Nosso objetivo\n",
         "Queremos deixar uma base organizada para podermos estudar a relação entre partos com risco para o bebê e algumas condições como tempo de parto, consultas de pré-natal etc.\n",
         "\n",
