--- a/Módulo 04 - Introdução ao pandas e carga de dados/Mod04Ex03.ipynb
+++ b/Módulo 04 - Introdução ao pandas e carga de dados/Mod04Ex03.ipynb
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 63,
       "metadata": {
         "id": "oHtYpLCDQO-X"
       },
@@ -242,16 +242,15 @@
       "source": [
         "#1) \n",
         "def consulta(uf, tipo_interessado):\n",
-        "    url = 'https://apidatalake.tesouro.gov.br/ords/sadipem/tt/pvl?uf={}&tipo_interessado={}'.format(uf, tipo_interessado)\n",
+        "    url = f'https://apidatalake.tesouro.gov.br/ords/sadipem/tt/pvl?uf={uf}&tipo_interessado={tipo_interessado}'\n",
         "    resposta = requests.get(url, timeout=120)\n",
-        "    dados_json = resposta.json()\n",
-        "    dataframe = pd.DataFrame(dados_json['items'])\n",
-        "    return dataframe\n"
+        "    resposta.raise_for_status()\n",
+        "    return pd.DataFrame(resposta.json().get('items', []))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 64,
       "metadata": {
         "id": "-H-C-I0_QO-a"
       },
@@ -274,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 65,
       "metadata": {
         "id": "rtMHHHMyQO-d"
       },
@@ -301,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 66,
       "metadata": {
         "id": "2rBkeA_2QO-f"
       },
