--- a/Módulo 04 - Introdução ao pandas e carga de dados/Mod04Ex03.ipynb
+++ b/Módulo 04 - Introdução ao pandas e carga de dados/Mod04Ex03.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 94,
       "metadata": {
         "id": "ttgqd1kcQO-H"
       },
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 96,
       "metadata": {},
       "outputs": [
         {
@@ -72,7 +72,7 @@
               "200"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 96,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 97,
       "metadata": {
         "id": "_AItLQeOReVb"
       },
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 98,
       "metadata": {
         "id": "lx2qjC_oRpDn"
       },
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 99,
       "metadata": {
         "id": "ZKYkz7AyRwmI"
       },
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 100,
       "metadata": {
         "id": "j7Llg88XQO-R"
       },
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 101,
       "metadata": {
         "id": "B5wbhQkpQO-T"
       },
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 102,
       "metadata": {},
       "outputs": [
         {
@@ -234,13 +234,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 103,
       "metadata": {
         "id": "oHtYpLCDQO-X"
       },
       "outputs": [],
       "source": [
         "#1) \n",
+        "# Construimos a URL da consulta com base nos parâmetros UF e tipo_interessado\n",
+        "# Fazemos uma solicitação GET à API utilizando a URL\n",
+        "# Verificamos se houve algum erro na resposta\n",
+        "# Convertemos o JSON retornado para um DataFrame \n",
+        "# Utilizamos a chave 'items' do JSON, se existir, caso contrário retorna uma lista vazia\n",
+        "\n",
         "def consulta(uf, tipo_interessado):\n",
         "    url = f'https://apidatalake.tesouro.gov.br/ords/sadipem/tt/pvl?uf={uf}&tipo_interessado={tipo_interessado}'\n",
         "    resposta = requests.get(url, timeout=120)\n",
@@ -250,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 104,
       "metadata": {
         "id": "-H-C-I0_QO-a"
       },
@@ -265,6 +271,10 @@
       ],
       "source": [
         "# 2) \n",
+        "# Realizamos uma consulta para o estado de Minas Gerais com interessado igual a 'Estado'\n",
+        "# Filtramos o DataFrame para selecionar as solicitações com status igual a 'Arquivado por decurso de prazo'\n",
+        "# Obtemos o número de solicitações arquivadas contando o número de linhas no DataFrame filtrado\n",
+        "# Imprimimos o número de solicitações arquivadas para o estado de Minas Gerais\n",
         "\n",
         "minas = consulta('MG', 'Estado')\n",
         "solicitacoes = minas[minas['status'] == 'Arquivado por decurso de prazo'].shape[0]\n",
@@ -273,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 105,
       "metadata": {
         "id": "rtMHHHMyQO-d"
       },
@@ -288,6 +298,12 @@
       ],
       "source": [
         "# 3) \n",
+        "# Realizamos uma consulta para os municípios da Bahia com interessado igual a 'Município'\n",
+        "# Filtramos o DataFrame para selecionar somente os registros com UF igual a 'BA'\n",
+        "# Verificamos se há solicitações deferidas no DataFrame filtrado\n",
+        "# Filtramos o DataFrame para selecionar somente os registros com status igual a 'Deferido'\n",
+        "# Obtemos o município com mais solicitações deferidas\n",
+        "\n",
         "bahia_municipio = consulta('BA', 'Município')\n",
         "bahia_municipio = bahia_municipio[bahia_municipio['uf'] == 'BA']\n",
         "\n",
@@ -300,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 106,
       "metadata": {
         "id": "2rBkeA_2QO-f"
       },
@@ -406,6 +422,9 @@
       ],
       "source": [
         "# 4) \n",
+        "# Realizamos uma consulta para o estado da Bahia com interessado igual a 'Estado'\n",
+        "# Salvamos os dados do estado da Bahia em um arquivo CSV chamado 'solicitacoes_bahia.csv'\n",
+        "# Imprimimos os dados do estado da Bahia\n",
         "\n",
         "bahia_estado = consulta('BA', 'Estado')\n",
         "bahia_estado.to_csv('solicitacoes_bahia.csv')\n",
