--- a/Módulo 04 - Introdução ao pandas e carga de dados/Mod04Ex03.ipynb
+++ b/Módulo 04 - Introdução ao pandas e carga de dados/Mod04Ex03.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 107,
       "metadata": {
         "id": "ttgqd1kcQO-H"
       },
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 108,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -57,13 +57,15 @@
       },
       "outputs": [],
       "source": [
+        "# Realizamos uma solicitação GET para a API do Tesouro Nacional a fim de obter os dados dos municípios\n",
+        "\n",
         "url = 'https://apidatalake.tesouro.gov.br/ords/sadipem/tt/pvl?uf=RJ&tipo_interessado=Munic%C3%ADpio'\n",
         "r = requests.get(url, timeout=120)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
@@ -72,18 +74,20 @@
               "200"
             ]
           },
-          "execution_count": 96,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "# Obtemos o código de status da resposta da requisição\n",
+        "\n",
         "r.status_code"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 110,
       "metadata": {
         "id": "_AItLQeOReVb"
       },
@@ -97,13 +101,15 @@
         }
       ],
       "source": [
+        "# Convertemos a resposta da requisição para JSON\n",
+        "# Imprime os dados da resposta no formato JSON\n",
         "data_json = r.json()\n",
         "print(r.json())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 111,
       "metadata": {
         "id": "lx2qjC_oRpDn"
       },
@@ -117,24 +123,29 @@
         }
       ],
       "source": [
+        "# Imprimimos os dados da chave 'items' contidos no objeto JSON\n",
+        "\n",
         "print(data_json['items'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 112,
       "metadata": {
         "id": "ZKYkz7AyRwmI"
       },
       "outputs": [],
       "source": [
+        "# Criamos um DataFrame a partir dos dados da chave 'items' do JSON\n",
+        "# Filtramos os dados do DataFrame para selecionar apenas os registros relacionados aos municípios do estado do Rio de Janeiro\n",
+        "\n",
         "df = pd.DataFrame(data_json['items'])\n",
         "rio = df[(df['tipo_interessado'] == 'Município') & (df['uf'] == 'RJ')]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 113,
       "metadata": {
         "id": "j7Llg88XQO-R"
       },
@@ -152,31 +163,31 @@
         }
       ],
       "source": [
-        "# 2) Seu código aqui\n",
+        "# 2) \n",
+        "# Contamos e seleciona os 3 principais valores da coluna 'status' no DataFrame 'rio'\n",
+        "# Imprimos os 3 principais valores e suas contagens\n",
+        "\n",
         "top3_status = rio['status'].value_counts().head(3)\n",
         "print(top3_status)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 114,
       "metadata": {
         "id": "B5wbhQkpQO-T"
       },
       "outputs": [],
       "source": [
-        "# 3) Construa uma nova variável que contenha o ano do **status**. \n",
-        "# Observe que ```data_status``` vem como tipo *object* no **DataFrame**. \n",
-        "# Dica: você pode usar o método ```.str``` para transformar o tipo da variável em string, em seguida um método como [**slice()**]\n",
-        "# (https://pandas.pydata.org/docs/reference/api/pandas.Series.str.slice.html) \n",
-        "# ou [**split()**](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.str.split.html).\n",
+        "# 3) \n",
+        "# Extraimos o ano da coluna 'data_status' e adiciona como uma nova coluna 'ano_status' no DataFrame 'rio'\n",
         "\n",
         "rio['ano_status'] = rio['data_status'].str.slice(-4)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 115,
       "metadata": {},
       "outputs": [
         {
@@ -210,7 +221,9 @@
         }
       ],
       "source": [
-        "# 4) Indique a frequência de cada ano do campo construído no item (3).\n",
+        "# 4) \n",
+        "# Calculamos a contagem de frequência dos anos presentes na coluna 'ano_status' do DataFrame 'rio'\n",
+        "# Imprimos a contagem de frequência dos anos\n",
         "\n",
         "frequencia_ano = rio['ano_status'].value_counts()\n",
         "print(frequencia_ano)\n"
@@ -234,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 116,
       "metadata": {
         "id": "oHtYpLCDQO-X"
       },
@@ -256,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 117,
       "metadata": {
         "id": "-H-C-I0_QO-a"
       },
@@ -283,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 118,
       "metadata": {
         "id": "rtMHHHMyQO-d"
       },
@@ -316,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 119,
       "metadata": {
         "id": "2rBkeA_2QO-f"
       },
