Atualizações de Arquivos

--- a/Módulo 06 - Descritiva I/Mod06Ex01.ipynb
+++ b/Módulo 06 - Descritiva I/Mod06Ex01.ipynb
@@ -23,7 +23,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
-        "arquivo = r'C:\\Users\\grego\\Documents\\GitHub\\Cientistadedados-EBAC\\Sinasc.csv'\n",
+        "arquivo = r'C:\\Users\\grego\\Documents\\GitHub\\Cientistadedados-EBAC\\Módulo 06 - Descritiva I\\Sinasc.csv'\n",
         "df = pd.read_csv(arquivo, sep = ',')\n",
         "df = pd.DataFrame(df)"
       ]
